<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activity.BankDetailActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/your_bank_account_detail"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/bankDetailsLoadingProgress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:indeterminate="true"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp32"
                android:text="@string/provide_your_bank_detailwhere_admin_will_deposite_your_earnings_though_food_delivery_app"
                android:textColor="@color/colorDarkText2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_holder_name"
                android:textColor="@color/colorDarkText3" />

            <EditText
                android:id="@+id/bankHolderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp16"
                android:fontFamily="@font/roboto"
                android:hint="@string/account_holder_name"
                android:inputType="text"
                android:textColor="@color/colorDarkText4"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_name"
                android:textColor="@color/colorDarkText3" />

            <EditText
                android:id="@+id/bankName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp16"
                android:fontFamily="@font/roboto"
                android:hint="@string/bank_name"
                android:inputType="text"
                android:text=""
                android:textColor="@color/colorDarkText4"
                android:textSize="16sp" />

            <!--<Spinner-->
            <!--android:id="@+id/bank_detail_bank_name_spinner"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="@dimen/dp16"-->
            <!--android:entries="@array/bank_names" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branch_code"
                android:textColor="@color/colorDarkText3" />

            <EditText
                android:id="@+id/bankBranchCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp16"
                android:fontFamily="@font/roboto"
                android:hint="@string/branch_code"
                android:inputType="text"
                android:textColor="@color/colorDarkText4"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_number"
                android:textColor="@color/colorDarkText3" />

            <EditText
                android:id="@+id/bankAccountNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp16"
                android:fontFamily="@font/roboto"
                android:hint="@string/account_number"
                android:inputType="number"
                android:textColor="@color/colorDarkText4"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:orientation="vertical">

        <include layout="@layout/progress_bar_horizontal" />

        <Button
            android:id="@+id/bank_detail_update_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_accent"
            android:text="@string/update_info"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
