<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.hababk.delivery.activity.AddItemActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/add_item_camera_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/camera_image_background"
            android:padding="@dimen/dp16"
            android:src="@drawable/ic_camera_gray_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:text="@string/upload_item_image"
            android:textSize="16sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/dp16">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:fontFamily="@font/roboto"
                android:hint="@string/item_name"
                android:inputType="text"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/add_item_spinner_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:entries="@array/item_type" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:fontFamily="@font/roboto"
                android:hint="@string/short_description"
                android:inputType="text"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp16"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/price_in_bd"
                    android:inputType="number"
                    android:textSize="16sp" />

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/avilable" />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/specification"
                android:inputType="text"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mar_30">

                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choose Item Category"
                    android:id="@+id/add_item_category_tv"
                    android:layout_below="@+id/add_item_name_view"
                    android:textSize="@dimen/textSize18sp"
                    android:layout_marginTop="@dimen/mar_20"/>

                <ImageView
                    android:layout_width="@dimen/mar_30"
                    android:layout_height="@dimen/mar_30"
                    android:id="@+id/add_item_cat_arrow_iv"
                    android:layout_below="@+id/add_item_name_view"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_arrow_drop_down"
                    android:layout_marginTop="@dimen/mar_20"/>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_item_cate_list_view"
                    android:layout_below="@+id/add_item_category_tv"
                    android:divider="@color/LightGray"
                    android:visibility="gone"
                    android:dividerHeight="@dimen/mar_0_5"/>-->


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:background="@drawable/button_background_red"
            android:text="@string/add_item"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </FrameLayout>
</LinearLayout>
