<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp16">

        <TextView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp32"
            android:layout_marginTop="@dimen/dp16"
            android:drawableLeft="@drawable/ic_person_primary_24dp"
            android:drawablePadding="@dimen/dp16"
            android:drawableStart="@drawable/ic_person_primary_24dp"
            android:text="@string/profile"
            android:textColor="@color/colorDarkText4"
            android:textSize="18sp" />

        <!--<TextView-->
            <!--android:id="@+id/notificationSettings"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="@dimen/dp32"-->
            <!--android:drawableLeft="@drawable/ic_notifications_primary_24dp"-->
            <!--android:drawablePadding="@dimen/dp16"-->
            <!--android:drawableStart="@drawable/ic_notifications_primary_24dp"-->
            <!--android:text="Notification settings"-->
            <!--android:textColor="@color/colorDarkText4"-->
            <!--android:textSize="18sp" />-->

        <TextView
            android:id="@+id/bankDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp32"
            android:drawableLeft="@drawable/ic_account_balance_primary_24dp"
            android:drawablePadding="@dimen/dp16"
            android:drawableStart="@drawable/ic_account_balance_primary_24dp"
            android:text="@string/bank_details"
            android:textColor="@color/colorDarkText4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp32"
            android:drawableLeft="@drawable/ic_email_primary_24dp"
            android:drawablePadding="@dimen/dp16"
            android:drawableStart="@drawable/ic_email_primary_24dp"
            android:text="@string/support"
            android:textColor="@color/colorDarkText4"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>