<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hababk.delivery.activity.ActivityDetailActivity">

    <include layout="@layout/toolbar" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/durationContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_access_time_primary_24dp"
                android:drawablePadding="4dp"
                android:text="@string/min"
                android:textColor="@color/colorDarkText3"
                android:textSize="16sp" />
        </FrameLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorDarkText1" />

        <FrameLayout
            android:id="@+id/distanceContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_navigation_primary_24dp"
                android:drawablePadding="4dp"
                android:text="@string/km"
                android:textColor="@color/colorDarkText3"
                android:textSize="16sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/actionDelivery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/actionDeliveryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/refresh_order"
                android:textColor="@android:color/white" />
        </FrameLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:indeterminate="true"
        android:visibility="invisible" />

    <include layout="@layout/delivery_item_layout" />

</LinearLayout>
